# libudev

./: README.md  TERMUX_LIBUDEV_SUMMARY.md  meson.build  meson_options.txt
include/: libudev.h
src/: libudev-device.c  libudev-enumerate.c  libudev-hwdb.c  libudev-list.c  libudev-monitor.c  libudev-private.h  libudev-queue.c  libudev-util.c  libudev.c  libudev.h
